# dps-config-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
.roo/rules/: rules.md
docs/llm/: instructions.md
docs/llm/drafts/: original-idea.md
docs/llm/plans/2025/11/: 13-implementation-plan.md  13-readme-plan.md  14-add-auth-session-ttl-seconds.md  15-update-dpsauthapi-config.md  25-remove-api-subdomain-config.md  26-change-auth-api-session-ttl-to-u32.md
src/: lib.rs
